@@ -127,6 +127,7 @@ Revision:
 * #302: imProfile: redirecting from userinfo.php to index.php if social_mode is on | ticket from addons (Phoenyx)
 * #752: SQL syntax error when upgrading to 1.1 (skenow)
 * #337: imProfile: setting umode and uorder for new users according to system settings | ticket from addons (Phoenyx)
+* #755: fixed wrong parameter handling in IcmsSecureForm (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
